--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="score_player_1">player 1: 0</string>
     <string name="score_player_2">player 2: 0</string>
     <string name="player_turn">player 1\'s turn</string>
+    <string name="reset">Reset</string>
 </resources>
